fix: 增大FreeRTOS_config中的MAX_HEAP_SIZE，解决部分task创建失败的问题

--- a/exchange_station/mcu/stm32f407/stm32f407.ioc
+++ b/exchange_station/mcu/stm32f407/stm32f407.ioc
@@ -116,8 +116,9 @@ FREERTOS.INCLUDE_xSemaphoreGetMutexHolder=1
 FREERTOS.INCLUDE_xTaskAbortDelay=1
 FREERTOS.INCLUDE_xTaskGetCurrentTaskHandle=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskCleanUpResources,INCLUDE_vTaskDelayUntil,INCLUDE_xQueueGetMutexHolder,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_uxTaskGetStackHighWaterMark,INCLUDE_xTaskGetCurrentTaskHandle,INCLUDE_eTaskGetState,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle,INCLUDE_xEventGroupSetBitFromISR,configUSE_TIMERS,FootprintOK
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskCleanUpResources,INCLUDE_vTaskDelayUntil,INCLUDE_xQueueGetMutexHolder,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_uxTaskGetStackHighWaterMark,INCLUDE_xTaskGetCurrentTaskHandle,INCLUDE_eTaskGetState,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle,INCLUDE_xEventGroupSetBitFromISR,configUSE_TIMERS,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=32768
 FREERTOS.configUSE_TIMERS=0
 File.Version=6
 I2C3.I2C_Mode=I2C_Fast
