--- a/exchange_station/mcu/stm32f427/stm32f427.ioc
+++ b/exchange_station/mcu/stm32f427/stm32f427.ioc
@@ -66,8 +66,9 @@ FREERTOS.INCLUDE_xSemaphoreGetMutexHolder=1
 FREERTOS.INCLUDE_xTaskAbortDelay=1
 FREERTOS.INCLUDE_xTaskGetCurrentTaskHandle=1
 FREERTOS.INCLUDE_xTaskGetHandle=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,INCLUDE_vTaskCleanUpResources,INCLUDE_vTaskDelayUntil,INCLUDE_xQueueGetMutexHolder,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_uxTaskGetStackHighWaterMark,INCLUDE_xTaskGetCurrentTaskHandle,INCLUDE_eTaskGetState,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle
+FREERTOS.IPParameters=Tasks01,FootprintOK,INCLUDE_vTaskCleanUpResources,INCLUDE_vTaskDelayUntil,INCLUDE_xQueueGetMutexHolder,INCLUDE_xSemaphoreGetMutexHolder,INCLUDE_pcTaskGetTaskName,INCLUDE_uxTaskGetStackHighWaterMark,INCLUDE_xTaskGetCurrentTaskHandle,INCLUDE_eTaskGetState,INCLUDE_xTaskAbortDelay,INCLUDE_xTaskGetHandle,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=32768
 File.Version=6
 IWDG.IPParameters=Prescaler,Reload
 IWDG.Prescaler=IWDG_PRESCALER_32
