--- a/engineer/mcu/stm32f427/stm32f427.ioc
+++ b/engineer/mcu/stm32f427/stm32f427.ioc
@@ -80,17 +80,18 @@ Mcu.IP1=CAN1
 Mcu.IP10=SPI5
 Mcu.IP11=SYS
 Mcu.IP12=TIM3
-Mcu.IP13=TIM6
-Mcu.IP14=TIM8
-Mcu.IP15=TIM12
-Mcu.IP16=UART7
-Mcu.IP17=UART8
-Mcu.IP18=USART1
-Mcu.IP19=USART3
+Mcu.IP13=TIM5
+Mcu.IP14=TIM6
+Mcu.IP15=TIM8
+Mcu.IP16=TIM12
+Mcu.IP17=UART7
+Mcu.IP18=UART8
+Mcu.IP19=USART1
 Mcu.IP2=CAN2
-Mcu.IP20=USART6
-Mcu.IP21=USB_DEVICE
-Mcu.IP22=USB_OTG_FS
+Mcu.IP20=USART3
+Mcu.IP21=USART6
+Mcu.IP22=USB_DEVICE
+Mcu.IP23=USB_OTG_FS
 Mcu.IP3=DMA
 Mcu.IP4=FREERTOS
 Mcu.IP5=I2C2
@@ -98,7 +99,7 @@ Mcu.IP6=IWDG
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SPI4
-Mcu.IPNb=23
+Mcu.IPNb=24
 Mcu.Name=STM32F427I(G-I)Hx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PE3
@@ -118,52 +119,56 @@ Mcu.Pin20=PI2
 Mcu.Pin21=PA11
 Mcu.Pin22=PC14/OSC32_IN
 Mcu.Pin23=PF0
-Mcu.Pin24=PC15/OSC32_OUT
-Mcu.Pin25=PH2
-Mcu.Pin26=PH0/OSC_IN
-Mcu.Pin27=PH3
-Mcu.Pin28=PH1/OSC_OUT
-Mcu.Pin29=PF1
+Mcu.Pin24=PI0
+Mcu.Pin25=PC15/OSC32_OUT
+Mcu.Pin26=PH2
+Mcu.Pin27=PH0/OSC_IN
+Mcu.Pin28=PH3
+Mcu.Pin29=PH1/OSC_OUT
 Mcu.Pin3=PE0
-Mcu.Pin30=PH4
-Mcu.Pin31=PG8
-Mcu.Pin32=PH5
-Mcu.Pin33=PG7
-Mcu.Pin34=PG6
-Mcu.Pin35=PF7
-Mcu.Pin36=PF6
-Mcu.Pin37=PG5
-Mcu.Pin38=PG4
-Mcu.Pin39=PG3
+Mcu.Pin30=PF1
+Mcu.Pin31=PH4
+Mcu.Pin32=PG8
+Mcu.Pin33=PH5
+Mcu.Pin34=PG7
+Mcu.Pin35=PG6
+Mcu.Pin36=PF7
+Mcu.Pin37=PF6
+Mcu.Pin38=PH12
+Mcu.Pin39=PG5
 Mcu.Pin4=PB5
-Mcu.Pin40=PF9
-Mcu.Pin41=PF8
-Mcu.Pin42=PG2
-Mcu.Pin43=PB2/BOOT1
-Mcu.Pin44=PG1
-Mcu.Pin45=PH6
-Mcu.Pin46=PE8
-Mcu.Pin47=PE11
-Mcu.Pin48=PB12
-Mcu.Pin49=PB13
+Mcu.Pin40=PG4
+Mcu.Pin41=PG3
+Mcu.Pin42=PF9
+Mcu.Pin43=PF8
+Mcu.Pin44=PH11
+Mcu.Pin45=PH10
+Mcu.Pin46=PG2
+Mcu.Pin47=PB2/BOOT1
+Mcu.Pin48=PG1
+Mcu.Pin49=PH6
 Mcu.Pin5=PG14
-Mcu.Pin50=PD9
-Mcu.Pin51=PD8
-Mcu.Pin52=PF14
-Mcu.Pin53=PE7
-Mcu.Pin54=PE12
-Mcu.Pin55=VP_ADC1_Vref_Input
-Mcu.Pin56=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin57=VP_IWDG_VS_IWDG
-Mcu.Pin58=VP_SYS_VS_tim14
-Mcu.Pin59=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin50=PE8
+Mcu.Pin51=PE11
+Mcu.Pin52=PB12
+Mcu.Pin53=PB13
+Mcu.Pin54=PD9
+Mcu.Pin55=PD8
+Mcu.Pin56=PF14
+Mcu.Pin57=PE7
+Mcu.Pin58=PE12
+Mcu.Pin59=VP_ADC1_Vref_Input
 Mcu.Pin6=PG13
-Mcu.Pin60=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin61=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin60=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin61=VP_IWDG_VS_IWDG
+Mcu.Pin62=VP_SYS_VS_tim14
+Mcu.Pin63=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin64=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin65=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin7=PA14
 Mcu.Pin8=PA13
 Mcu.Pin9=PE5
-Mcu.PinsNb=62
+Mcu.PinsNb=66
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F427IIHx
@@ -345,6 +350,12 @@ PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
+PH10.Locked=true
+PH10.Signal=S_TIM5_CH1
+PH11.Locked=true
+PH11.Signal=S_TIM5_CH2
+PH12.Locked=true
+PH12.Signal=S_TIM5_CH3
 PH2.GPIOParameters=GPIO_Label
 PH2.GPIO_Label=DC24V_2
 PH2.Locked=true
@@ -366,6 +377,8 @@ PH6.GPIO_Label=BUZZER
 PH6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PH6.Locked=true
 PH6.Signal=S_TIM12_CH1
+PI0.Locked=true
+PI0.Signal=S_TIM5_CH4
 PI2.GPIOParameters=GPIO_Speed
 PI2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PI2.Locked=true
@@ -410,7 +423,7 @@ ProjectManager.StackSize=0x8000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM12_Init-TIM12-false-HAL-true,10-MX_USART6_UART_Init-USART6-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_UART8_Init-UART8-false-HAL-true,15-MX_TIM8_Init-TIM8-false-HAL-true,16-MX_TIM3_Init-TIM3-false-HAL-true,17-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,18-MX_I2C2_Init-I2C2-false-HAL-true,19-MX_SPI4_Init-SPI4-false-HAL-true,20-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true,6-MX_SPI5_Init-SPI5-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM12_Init-TIM12-false-HAL-true,10-MX_USART6_UART_Init-USART6-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_UART8_Init-UART8-false-HAL-true,15-MX_TIM8_Init-TIM8-false-HAL-true,16-MX_TIM3_Init-TIM3-false-HAL-true,17-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,18-MX_I2C2_Init-I2C2-false-HAL-true,19-MX_SPI4_Init-SPI4-false-HAL-true,20-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -454,6 +467,14 @@ SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
 SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
+SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
+SH.S_TIM5_CH2.ConfNb=1
+SH.S_TIM5_CH3.0=TIM5_CH3,PWM Generation3 CH3
+SH.S_TIM5_CH3.ConfNb=1
+SH.S_TIM5_CH4.0=TIM5_CH4,PWM Generation4 CH4
+SH.S_TIM5_CH4.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
@@ -481,6 +502,13 @@ TIM12.Pulse-PWM\ Generation1\ CH1=1000
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Period
 TIM3.Period=4999
+TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM5.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM5.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
+TIM5.Period=19999
+TIM5.Prescaler=83
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=999
 TIM6.Prescaler=83
